sass/layout/_default_page.scss
.page,
.error404 {
  main {
    @include secondthought-container;
    @include pad(0 $gutter/2);
    section {
      @include span-columns(12);
    }
  }
}
.not-home.page section {
  background-color: #fff;
  padding: 30px;
  border-radius: 5px;
  @include shadow-2dp();
  .heading,
  .entry-title {
    border-bottom: 1px solid #B7B7B7;
    padding-bottom: 20px;
    // margin-bottom: 28px;
  }
}

.home {
  .text-sizer {
    margin-bottom: -30px;
    position: relative;
    z-index: 1000;
    .help-text {
      color: #fff;
    }
    .legacy & {
      margin-bottom: 0;
    }
  }
}

.home.legacy {
  .text-sizer {
    margin-bottom: 6px;
    position: relative;
    z-index: 1000;
    .help-text {
      color: $base-font-color;
    }
  }
}

th {
  &.header {
    min-width: 100px;
    &:after {
      content: "\f0dc";
      display: inline-block;
      font: normal normal normal 14px/1 FontAwesome;
      font-size: inherit;
      text-rendering: auto;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
      float: right;
    }
  }
  &.headerSortUp {
    &:after {
      content: "\f0de";
      display: inline-block;
      font: normal normal normal 14px/1 FontAwesome;
      font-size: inherit;
      text-rendering: auto;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
      float: right;
    }
  }

  &.headerSortDown {
    &:after {
      content: "\f0dd";
      display: inline-block;
      font: normal normal normal 14px/1 FontAwesome;
      font-size: inherit;
      text-rendering: auto;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
      float: right;
    }
  }
}

.youtube-list {
  display: flex;
  width: 100%;
  justify-content: space-around;
  // padding: 0 $gutter/2 0 $gutter;
  flex-wrap: wrap;
  .md-trigger {
    @include media($xs) {
      flex: 1 1 48%;
    }
    @include media($sm-up) {
      flex: 1 1 23%;
    }
    margin-right: 2%;
    min-width: 233px;
    &:last-child {
      margin-right: 0;
    }
  }
}

.utilities {
  @include secondthought-container;
  @include pad(0 $gutter/2);
  width: 100%;
}
.text-sizer {
  margin: 6px 0;
  width: 100%;
  max-width: 250px;
  display: flex;
  float: right;
  @include media($sm-up) {
  }
  @include media($sm-down) {
    // display: none;
  }

  .help-text {
    flex: 0 1 auto;
    @include pad(0 20px 0 0);
    text-align: right;
    p {
      margin: 0;
      font-size: $base-font-size;
      line-height: $base-font-size*1.5;
    }

    @include media($sm-down) {
      font-size: 13px;
    }
  }

  #slider {
    flex: 1 1 auto;

    height: 10px;
    margin-top: 7px;
    background: rgba(#fff, .5);
    position: relative;
    text-align: left;
    border-radius: 100px;
    .ui-slider-handle {
      position: absolute;
      z-index: 2;
      width: 20px;
      height: 20px;
      cursor: default;
      touch-action: none;
      background: $brand-color-1;
      margin-top: -5px;
      border-radius: 50%;
      transform: translateX(-10px);
      &:focus {
        outline-style: none;
      }
    }
    .ui-slider-range {
      position: absolute;
      z-index: 1;
      font-size: $base-font-size*.7;
      display: block;
      border: 0;
      background-position: 0 0;
    }
    &.ui-state-disabled {
      .ui-slider-handle {
        filter: inherit;
      }
      .ui-slider-range {
        filter: inherit;
      }
    }
  }
}

.frontpage-box {
  background-color: #edecec;
  @include shadow-2dp();
  border-radius: 6px;
  border: 5px solid #fff;
  .widget-title {
    padding: 15px;
    border-bottom: 1px solid #fff;
    font-size: 1.3rem;
    margin: 0;
    font-weight: 700;
    line-height: 1;
  }
  .textwidget {
    padding: 15px;
  }
}

.so-widget-secondthought-menu-widget ul {
  border-left: 2px solid $brand-color-1;
}

